--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "csv-parser": "^3.0.0",
-    "dotenv": "^16.0.1",
-    "sequelize": "^6.19.0"
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {},
   "scripts": {
